# maskingengine

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.minimal  PUBLISHING.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.2.0.md  claude-flow.config.json  coordination.md  docker-compose.yml  maskingengine.code-workspace  memory-bank.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run_api.py  setup.py  tdd-workflow.json  test_basic.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  release.yml  test.yml  version-check.yml
api/: __init__.py  main.py
cli/: __init__.py  main.py
docs/: README.md  examples.md  implementation_guide.md  testing_guide.md
docs/api/: api_contracts.md
docs/architecture/: architecture_diagrams.md  architecture_minimal.md  performance_optimization.md
docs/development/: phase_1_requirements.md  phase_2_pseudocode.md  phase_3_modules.md
examples/: api_example.py  cli_example.sh  llm_integration_example.py  multilingual_demo.py  pattern_pack_demo.py  pipeline_modes_demo.py  python_example.py
maskingengine/: __init__.py  config.py  detectors.py  masker.py  parsers.py  pattern_packs.py  rehydrator.py  sanitizer.py
maskingengine/api/: main.py
maskingengine/cli/: main.py
maskingengine/core/: config.py  masking.py  parsers.py  pipeline.py  profiles.yaml  resolver.py  sanitizer.py  validator.py
maskingengine/detectors/: ner_detector.py  regex_detector.py
maskingengine/pipeline/: streaming.py
memory/: claude-flow-data.json  memory-store.json
memory/agents/: README.md
memory/sessions/: README.md
scripts/: run_api.py
tests/: test_cli.py
tests/integration/: test_sanitizer.py
tests/unit/: test_masking_engine.py  test_regex_detector.py
